<resources>
    <string name="app_name">PermaTIC</string>
    <string name="dash">\u2014</string>
    <string name="paket1">Paket 1</string>
    <string name="paket2">Paket 2</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="login">Masuk</string>
    <string name="reset">Reset Password</string>
    <string name="logout">Keluar</string>
    <string name="nama_hint">Nama</string>
    <string name="sekolah_hint">Sekolah</string>
    <string name="paket_hint">Paket</string>
</resources>
